--- a/StopWatch/app/build.gradle
+++ b/StopWatch/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     //compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:recyclerview-v7:22.2.1'
+    compile 'com.android.support:design:22.2.0'
     testCompile 'org.robolectric:robolectric:3.0'
     testCompile 'org.mockito:mockito-all:2.0.2-beta'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
@@ -39,5 +40,4 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-v4'
         exclude module: 'recyclerview-v7'
     }
-    //androidTestCompile 'com.android.support.test:runner:0.3'
 }
